# GCP-MCP

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  setup_verify_trial_project.sh  tools.yaml
jobs_agent/: .env  agent.py
jobs_agent/.adk/: session.db
scripts/: setup_database.sh  setup_jobs_db.py  verify_seed.py
