[project]
name = "build-agent-adk-toolbox-cloudsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloud-sql-python-connector[pg8000]>=1.20.2",
    "google-adk==1.29.0",
    "python-dotenv>=1.2.2",
    "toolbox-adk==1.0.0",
]
